# ChainQueen

./: .gitignore  CMakeLists.txt  README.md  _mpm_grad.py  arm.py  basketball.py  bend.py  bridge.py  collision.py  collision_mass.py  jump.py  jump_optimized.py  main.py  memo.py  mpm3d.py  mpm3d_test.py  reach.py  robot.py  robot2.py  shooting_method.py  simulation.py  states.py  test_tf_speed.py  tests.py  tests_2d.py  tests_3d.py  time_integration.py  time_integration_2d.py  time_integration_3d.py  vector_math.py
demo/: basketball.py  bridge.py  collision.py  collision_2d.py  collision_3d.py  collision_mass.py  export.py  multireach.py  rotating_muscle.py  walker.py  walker_env.py
demo/walker/: __init__.py  walker_env.py  walker_sim.py
demos/: accuracy_collision_3d.py  arm_3d.py  arm_3d_v2.py  arm_3d_v3.py  arm_3d_v3_old.py  basketball.py  bridge.py  collision_2d.py  collision_3d.py  collision_grad_2d.py  collision_grad_3d.py  collision_mass.py  crawler_3d.py  crawler_3d_benchmark.py  finger_plot.py  model.py  multireach.py  rolling.py  rolling_boundary.py  rotating_muscle.py  timeline_01.json  timeline_complex_controller.json  timeline_simple_controller.json  timeline_simple_controller_partsize10.json  walker.py  walker3d_old.py  walker_2d.py  walker_2d_benchmark.py  walker_3d.py
demos/finger/: finger_env.py  finger_sim.py
demos/walker/: walker_sim.py
docs/: API.rst  installation.rst
scatter_add/: .gitignore  CMakeLists.txt  img2hist.py  scatter_inc.cpp  scatter_inc.h  scatter_inc.py  scatter_inc_grad.cpp  scatter_inc_grad_grad.cpp
src/: backward.cu  config.h  forward.cu  g2pop.cc  inc_op.cc  kernel_example.cpp  kernel_example.cu  kernel_example.h  kernels.h  linalg.cuh  linalg.h  misc.cu  mpmgradop.cc  mpmop.cc  op.cpp  p2gop.cc  particle.h  simulator.cpp  state.cuh  state_base.h  svd.cuh
trash/: kernel_example.cpp  kernel_example.cu
